remove fontawsome <- improve compiling speed

--- a/projects/angular-ngrx-material-starter/src/app/features/feature-list/feature-list/feature-list.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/feature-list/feature-list/feature-list.component.html
@@ -15,13 +15,13 @@
         </mat-card-subtitle>
         <mat-card-actions>
           <a *ngIf="feature.github" mat-icon-button [href]="feature.github" rel="noopener noreferrer" target="_blank">
-            <fa-icon [icon]="['fab','github']"></fa-icon>
+            <mat-icon>marker</mat-icon>
           </a>
           <a mat-button [href]="feature.documentation" rel="noopener noreferrer" target="_blank">
-            <fa-icon icon="book"></fa-icon>{{ 'anms.features.documentation' | translate }}
+            <mat-icon>marker</mat-icon>
           </a>
           <a *ngIf="feature.medium" mat-button [href]="feature.medium" rel="noopener noreferrer" target="_blank">
-            <fa-icon [icon]="['fab','medium-m']"></fa-icon>{{ 'anms.features.guide' | translate }}
+            <mat-icon>marker</mat-icon>
           </a>
         </mat-card-actions>
       </mat-card>
