--- a/projects/angular-ngrx-material-starter/src/app/features/settings/settings/settings-container.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/features/settings/settings/settings-container.component.html
@@ -8,7 +8,6 @@
       <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
         <h2>{{ 'anms.settings.general.title' | translate }}</h2>
         <div class="icon-form-field">
-          <mat-icon color="accent"><fa-icon icon="language" color="accent"></fa-icon></mat-icon>
           <mat-form-field>
             <mat-select [placeholder]="'anms.settings.general.placeholder' | translate"
                         [ngModel]="settings.language"
@@ -28,7 +27,9 @@
           </mat-form-field>
         </div>
         <div class="icon-form-field">
-           <mat-icon color="accent"><fa-icon icon="bars" color="accent"></fa-icon></mat-icon>
+           <mat-icon color="accent">
+              marker
+           </mat-icon>
            <mat-placeholder>{{ 'anms.settings.themes.sticky-header' | translate }}
            </mat-placeholder>
            <mat-slide-toggle
@@ -42,7 +43,7 @@
       <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
         <h2>{{ 'anms.settings.themes.title' | translate }}</h2>
         <div class="icon-form-field">
-          <mat-icon color="accent"><fa-icon icon="paint-brush" color="accent"></fa-icon></mat-icon>
+          <mat-icon>marker</mat-icon>
           <mat-form-field>
             <mat-select [placeholder]="'anms.settings.themes.placeholder' | translate"
                         [ngModel]="settings.theme"
@@ -55,9 +56,10 @@
           </mat-form-field>
         </div>
         <div class="icon-form-field">
-          <mat-icon color="accent"><fa-icon icon="lightbulb" color="accent"></fa-icon></mat-icon>
+          <mat-icon>marker</mat-icon>
           <mat-placeholder>{{ 'anms.settings.themes.night-mode' | translate }}
           </mat-placeholder>
+
           <mat-slide-toggle
             [checked]="settings.autoNightMode"
             (change)="onAutoNightModeToggle($event)">
@@ -67,7 +69,7 @@
       <div class="col-md-6 group" [ngClass]="routeAnimationsElements">
         <h2>{{ 'anms.settings.animations.title' | translate }}</h2>
         <div class="icon-form-field">
-          <mat-icon color="accent"><mat-icon color="accent"><fa-icon icon="window-maximize"></fa-icon></mat-icon></mat-icon>
+          <mat-icon>marker</mat-icon>
           <mat-placeholder>{{ 'anms.settings.animations.page' | translate }}
           </mat-placeholder>
           <mat-slide-toggle
@@ -83,7 +85,7 @@
           </mat-slide-toggle>
         </div>
         <div class="icon-form-field">
-          <mat-icon color="accent"><fa-icon icon="stream" color="accent"></fa-icon></mat-icon>
+          <mat-icon color="accent">marker</mat-icon>
           <mat-placeholder>{{ 'anms.settings.animations.elements' | translate }}
           </mat-placeholder>
           <mat-slide-toggle
