--- a/projects/angular-ngrx-material-starter/src/app/app/app.component.html
+++ b/projects/angular-ngrx-material-starter/src/app/app/app.component.html
@@ -21,8 +21,7 @@
       <div class="toolbar" [style.position]="(stickyHeader$ | async) ? 'fixed' : 'inherit'" [class.mat-elevation-z4]="(stickyHeader$ | async)">
         <mat-toolbar color="primary">
           <button mat-icon-button class="d-md-none" (click)="sidenav.open()">
-            <fa-icon icon="bars"></fa-icon>
-
+            <mat-icon color="accent">marker</mat-icon>
           </button>
 
           <span routerLink="" class="branding spacer center d-inline d-sm-none">
@@ -46,17 +45,17 @@
           <button *ngIf="(isAuthenticated$ | async)"
                   mat-icon-button
                   [matMenuTriggerFor]="toolbarUserMenu">
-            <fa-icon icon="user-circle"></fa-icon>
+            <mat-icon>marker</mat-icon>
           </button>
           <mat-menu #toolbarUserMenu="matMenu">
             <button mat-menu-item (click)="onLogoutClick()">
-              <mat-icon><fa-icon icon="power-off"></fa-icon></mat-icon>
+              <mat-icon color="accent">marker</mat-icon>
               <span>{{ 'anms.menu.logout' | translate }}</span>
             </button>
           </mat-menu>
 
           <button mat-icon-button routerLink="settings" class="d-none d-sm-inline">
-            <fa-icon icon="cog"></fa-icon>
+            <mat-icon color="accent">marker</mat-icon>
           </button>
 
           <a [matTooltip]="'anms.header.github' | translate"
@@ -65,7 +64,7 @@
              class="link d-none d-sm-inline"
              href="https://github.com/tomastrajan/angular-ngrx-material-starter"
              target="_blank" rel="noopener noreferrer">
-            <fa-icon [icon]="['fab','github']"></fa-icon>
+            <mat-icon color="accent">marker</mat-icon>
           </a>
 
           <span *ngIf="language$ | async as language">
@@ -85,43 +84,21 @@
       <div class="footer">
         <div class="row">
           <div class="col-sm-12 links">
-            <a href="https://www.github.com/tomastrajan" target="_blank" rel="noopener noreferrer">
-              <fa-icon [icon]="['fab','github']"></fa-icon>
-              <span>Github</span>
+            <a href="https://github.com/datmt" target="_blank" rel="noopener noreferrer">
+              <mat-icon>marker</mat-icon>
             </a>
-            <a href="https://www.medium.com/@tomastrajan" target="_blank" rel="noopener noreferrer">
-              <fa-icon [icon]="['fab','medium-m']"></fa-icon>
-              <span>Medium</span>
-            </a>
-            <a href="https://www.twitter.com/tomastrajan" target="_blank" rel="noopener noreferrer">
-              <fa-icon [icon]="['fab','twitter']"></fa-icon>
+
+            <a href="https://twitter.com/dat_tm24" target="_blank" rel="noopener noreferrer">
+              <mat-icon>marker</mat-icon>
               <span>Twitter</span>
             </a>
-            <a href="https://www.youtube.com/channel/UC7XgRHIVoqnh3U5Vmly9ofQ"
-               target="_blank" rel="noopener noreferrer">
-              <fa-icon [icon]="['fab','youtube']"></fa-icon>
-              <span>Youtube</span>
-            </a>
-            <a href="https://www.instagram.com/tomastrajan" target="_blank" rel="noopener noreferrer">
-              <fa-icon [icon]="['fab','instagram']"></fa-icon>
-              <span>Instagram</span>
-            </a>
-            <a href="https://www.slides.com/tomastrajan" target="_blank" rel="noopener noreferrer">
-              <fa-icon icon="play-circle"></fa-icon>
-              <span>Slides</span>
-            </a>
+
           </div>
         </div>
         <div class="row">
           <div class="col-12 signature">
-            &#169; <span class="year">{{year}}</span> - Tomas Trajan
+            &#169; <span class="year">{{year}}</span> - https://datmt.com/
             <br class="d-block d-sm-none">
-            <a [matTooltip]="'anms.footer.changelog' | translate"
-               matTooltipPosition="before"
-               href="https://github.com/tomastrajan/angular-ngrx-material-starter/blob/master/CHANGELOG.md">
-              <fa-icon icon="rocket"></fa-icon>
-              {{version}} <span *ngIf="!isProd">[{{envName}}]</span>
-            </a>
           </div>
         </div>
       </div>
